GNOME Bugzilla – Bug 719628
Pathbar disappears with long folder names
Last modified: 2014-02-17 21:12:04 UTC
If you have a long folder name, it is ellipsized to NAUTILUS_PATH_BAR_BUTTON_MAX_WIDTH since 79157f5617886401379a724f8c526c430c4876a6 in nautilus 3.5.2. But if the pathbar is smaller then NAUTILUS_PATH_BAR_BUTTON_MAX_WIDTH it still disappears. It seams that some of the code in the mentioned commit has no effect. I will prepare a patch, that uses the normal size instead of minimal size for path bar calculation. With it all pathbar buttons are ellipsized to hight * 2 if required.
Created attachment 263226 [details] [review] use natural_size patch
Created attachment 263229 [details] [review] ensures that allways two buttons are displayed This patch is on top of the previous patch. If there is a long folder name, the patbar button will consume the whole space. no other button, probably needed for navigation is displayed. This patch displays allways two buttons if required. The space is somehow shared at 50 % between the two buttons.
Created attachment 263256 [details] [review] ensures that allways two buttons are displayed
I think this has been fixed now in git master by other commits and fixes in GtkHeaderBar. Feel free to reopen if you can still reproduce the issue.
Good to hear, thanks! I'll check that.