pathbar: used natural_size instead of minimum_size for calc pathbar buttons

This fixes the problem that the pathbar disapears when the with is smaller
then NAUTILUS_PATH_BAR_BUTTON_MAX_WIDTH.
This patch removes also the not required function set_label_size_request()

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=719628